[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Hack_Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menu/game_menu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.333333, 0.27451, 0.27451, 0.92549 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[node name="GameMenu" type="CanvasLayer"]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 384.0
margin_top = 148.0
margin_right = 576.0
margin_bottom = 396.0
custom_styles/panel = SubResource( 1 )

[node name="Back to Game" type="Button" parent="."]
margin_left = 432.0
margin_top = 164.0
margin_right = 772.0
margin_bottom = 254.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color_hover = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.298039, 1 )
custom_fonts/font = SubResource( 6 )
text = "Back to Game"

[node name="Settings" type="Button" parent="."]
margin_left = 432.0
margin_top = 241.0
margin_right = 772.0
margin_bottom = 331.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color_hover = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.298039, 1 )
custom_fonts/font = SubResource( 3 )
text = "Settings"

[node name="Back to Main Menu" type="Button" parent="."]
margin_left = 432.0
margin_top = 298.0
margin_right = 772.0
margin_bottom = 388.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color_hover = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.298039, 1 )
custom_fonts/font = SubResource( 4 )
text = "Back to Main Menu"

[node name="Exit Game" type="Button" parent="."]
margin_left = 431.0
margin_top = 352.0
margin_right = 771.0
margin_bottom = 442.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color_hover = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.298039, 1 )
custom_fonts/font = SubResource( 5 )
text = "Exit Game"

[connection signal="pressed" from="Back to Game" to="." method="_on_Back_to_Game_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Back to Main Menu" to="." method="_on_Back_to_Main_Menu_pressed"]
[connection signal="pressed" from="Exit Game" to="." method="_on_Exit_Game_pressed"]
